--- a/app/index.html
+++ b/app/index.html
@@ -14,25 +14,36 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
-<div id="fullpage">
-    <div class="section">
-      <div class="section-img">
-        <img src="images/1.jpg" alt="">
-      </div>
+  <div class="page">
+    <div class="bg">
+      <img src="images/1.png" alt="" class="animated fadeInUp">
     </div>
-    <div class="section">
-      <div class="section-img">
-        <img src="images/2.jpg" alt="">
-      </div>
+    <div class="content">
+      <h1 class="animated t08 fadeInUpBig">Subhekshya Acharya</h1>
+      <p class="animated t2 fadeInLeft">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi veniam, sunt iure doloribus quam quasi obcaecati aliquam amet dicta facere labore soluta, corrupti minus corporis. Ratione sed pariatur dolorum?
+      </p>
+      <ul class="social-icons">
+        <li>
+          <a href="" class="animated t12 fadeInUpBig"><em class="fa fa-facebook-square"></em></a>
+        </li>
+        <li>
+          <a href="" class="animated t14 fadeInUpBig"><em class="fa fa-twitter-square"></em></a>
+        </li>
+        <li>
+          <a href="" class="animated t16 fadeInUpBig"><em class="fa fa-google-plus-square"></em></a>
+        </li>
+        <li>
+          <a href="" class="animated t18 fadeInUpBig"><em class="fa fa-linkedin-square"></em></a>
+        </li>
+      </ul>
     </div>
-    <div class="section">
-      <div class="section-img">
-        <img src="images/3.jpg" alt="">
-      </div>
-    </div>
-</div>
+
+  </div>
+
 
 
     <!--[if lt IE 7]>
