Adding other theme

--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,9 @@
     <div class="bg">
       <img src="images/1.png" alt="" class="animated fadeInUp">
     </div>
-    <div class="content">
+    <div class="content animated t06 fadeInUpBig">
       <h1 class="animated t08 fadeInUpBig">Subhekshya Acharya</h1>
-      <p class="animated t2 fadeInLeft">
+      <p class="animated t10 fadeInUpBig">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi veniam, sunt iure doloribus quam quasi obcaecati aliquam amet dicta facere labore soluta, corrupti minus corporis. Ratione sed pariatur dolorum?
       </p>
       <ul class="social-icons">
