Added text, modified js, added GA

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>SA</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -24,20 +24,24 @@
     <div class="content animated t06 fadeInUpBig">
       <h1 class="animated t08 fadeInUpBig">Subhekshya Acharya</h1>
       <p class="animated t10 fadeInUpBig">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi veniam, sunt iure doloribus quam quasi obcaecati aliquam amet dicta facere labore soluta, corrupti minus corporis. Ratione sed pariatur dolorum?
+        I am a <b>Chartered Accountant</b> with over <b>5 years</b> of professional experience in Statutory Audit, Internal Audit, Designing Model Business Processes, Compliance Review, Process Reviews and Project Management. 
+        I have worked with clients across varied industries like Banking and Financial Institution, IIT/ITeS, Manufacturing, Oil &amp; Gas, and Real Estate in <b>India</b> and <b>Nepal</b>.
+        
+        <br/><br/>
+        I am <a href="javascript:void(0)" id="dreamer">dreamer</a> and a true believer. I love chasing dreams no matter how impossible they seem. I enjoy travelling, reading and love <a href="http://appletiniatkathmandu.blogspot.in/" target="_blank" title="Visit my blog">blogging</a> as I think it brings me closer to myself.
       </p>
       <ul class="social-icons">
         <li>
-          <a href="" class="animated t12 fadeInUpBig"><em class="fa fa-facebook-square"></em></a>
+          <a href="https://www.facebook.com/subhekshyaa" target="_blank" class="animated t12 fadeInUpBig"><em class="fa fa-facebook-square"></em></a>
         </li>
-        <li>
+       <!--  <li>
           <a href="" class="animated t14 fadeInUpBig"><em class="fa fa-twitter-square"></em></a>
+        </li> -->
+        <li>
+          <a href="https://plus.google.com/107362596405919520630" target="_blank" class="animated t16 fadeInUpBig"><em class="fa fa-google-plus-square"></em></a>
         </li>
         <li>
-          <a href="" class="animated t16 fadeInUpBig"><em class="fa fa-google-plus-square"></em></a>
-        </li>
-        <li>
-          <a href="" class="animated t18 fadeInUpBig"><em class="fa fa-linkedin-square"></em></a>
+          <a href="https://www.linkedin.com/profile/view?id=238997810" target="_blank" class="animated t18 fadeInUpBig"><em class="fa fa-linkedin-square"></em></a>
         </li>
       </ul>
     </div>
@@ -50,14 +54,14 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <!-- Google Analytics -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='//www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
+      ga('create','UA-45874037-2');ga('send','pageview');
     </script>
 
 
